--- a/FrontEnd/src/app/Auth/login/login.page.html
+++ b/FrontEnd/src/app/Auth/login/login.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content>
-    <form #loginForm="ngForm" (ngSubmit)="login()">
+    <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
         <div class="svgContainer">
             <div>
                 <svg class="mySVG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 200 200">
@@ -131,8 +131,8 @@
         </div>
 
         <div class="inputGroup inputGroup1">
-            <label for="email1">Email</label>
-            <input type="text" id="email" name="email" [(ngModel)]="email" class="email" maxlength="256" required/>
+            <label for="email1">Username</label>
+            <input type="text" id="username" name="username" [(ngModel)]="username" class="email" maxlength="256" required/>
             <!-- <p class="helper helper1">email@domain.com</p> -->
             <span class="indicator"></span>
         </div>
