--- a/FrontEnd/src/app/home/home.page.html
+++ b/FrontEnd/src/app/home/home.page.html
@@ -1,19 +1,9 @@
-<ion-header class="ion-no-border" [translucent]="true">
+<ion-header>
     <ion-toolbar>
-        <ion-title>
-            Forum JEE
-        </ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <!-- <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Blank</ion-title>
-        </ion-toolbar>
-    </ion-header> -->
-    <!-- 
-    <h2 class="topics">Topics</h2> -->
 
     <ion-grid>
         <ion-row>
@@ -45,164 +35,12 @@
                             </ion-card>
                         </ion-col>
                     </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
                 </ion-grid>
 
             </ion-col>
             <!-- <ion-col size="1">
             </ion-col> -->
             <ion-col size="2">
-                <div class="widget">
-                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
-                    <hr>
-                    <p>
-                        test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
-                        test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
-                    </p>
-                </div>
-                <div class="widget">
-                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
-                    <hr>
-                    <p>
-                        test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
-                        test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
-                    </p>
-                </div>
                 <div class="widget">
                     <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
                     <hr>
