--- a/FrontEnd/src/app/user-page/user-page.page.html
+++ b/FrontEnd/src/app/user-page/user-page.page.html
@@ -1,9 +1,124 @@
+<!-- <app-header></app-header> -->
 <ion-header>
-  <ion-toolbar>
-    <ion-title>userPage</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+    </ion-toolbar>
 </ion-header>
+<ion-content class="has-header">
+    <ion-grid>
+        <ion-row>
+            <ion-col size="12">
+                <div class="backgrnd"></div>
+                <div class="image">
+                </div>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="7" offset="1" style="--ion-background-color: #fff;">
+                <ion-grid fixed>
+                    <ion-row>
+                        <ion-col size="12"></ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-card>
+                                <ion-grid fixed>
+                                    <ion-row>
+                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
+                                        <ion-col size="11">
+                                            <ion-card-header>
+                                                <ion-card-title><a href="/">First post</a></ion-card-title>
+                                                <ion-card-subtitle>Description</ion-card-subtitle>
+                                            </ion-card-header>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-grid>
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-card>
+                                <ion-grid fixed>
+                                    <ion-row>
+                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
+                                        <ion-col size="11">
+                                            <ion-card-header>
+                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
+                                                <ion-card-subtitle>Description</ion-card-subtitle>
+                                            </ion-card-header>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-grid>
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-card>
+                                <ion-grid fixed>
+                                    <ion-row>
+                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
+                                        <ion-col size="11">
+                                            <ion-card-header>
+                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
+                                                <ion-card-subtitle>Description</ion-card-subtitle>
+                                            </ion-card-header>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-grid>
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-card>
+                                <ion-grid fixed>
+                                    <ion-row>
+                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
+                                        <ion-col size="11">
+                                            <ion-card-header>
+                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
+                                                <ion-card-subtitle>Description</ion-card-subtitle>
+                                            </ion-card-header>
+                                        </ion-col>
+                                    </ion-row>
+                                </ion-grid>
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
 
-<ion-content>
+            </ion-col>
+            <!-- <ion-col size="1">
+            </ion-col> -->
+            <ion-col size="3">
+                <div class="widget">
+                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 20px; padding-bottom: 20px; color: #fff;">About the topic !</h4>
+                    <hr>
+                    <p>
+                        test test test test test test test test test test test test test test test test test test test test test test test test test
+                    </p>
+                </div>
+                <div class="widget">
+                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
+                    <hr>
+                    <p>
+                        test test test test test test test test test test test test test test test test test test test test test test test test test
+                    </p>
+                </div>
+                <div class="widget">
+                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
+                    <hr>
+                    <p>
+                        test test test test test test test test test test test test test test test test test test test test test test test test test
+                    </p>
+                </div>
+            </ion-col>
+
+        </ion-row>
+        <!-- <ion-row>
+
+        </ion-row> -->
+    </ion-grid>
 
 </ion-content>
