--- a/application/.settings/org.eclipse.wst.common.component
+++ b/application/.settings/org.eclipse.wst.common.component
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-
-            
+                
+    
     
     <wb-module deploy-name="application">
-                        
+                                
+        
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
+                                
+        
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                
+                        
+        
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-                
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                        
+        
         <property name="java-output-path" value="/application/target/classes"/>
-                
+                        
+        
         <property name="context-root" value="application"/>
-                    
+                            
+    
     
     </wb-module>
-        
+            
+
 
 </project-modules>
