--- a/FrontEnd/src/app/user-page/user-page.page.html
+++ b/FrontEnd/src/app/user-page/user-page.page.html
@@ -15,77 +15,35 @@
         <ion-row>
             <ion-col size="7" offset="1" style="--ion-background-color: #fff;">
                 <ion-grid fixed>
-                    <ion-row>
-                        <ion-col size="12"></ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">First post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">Second post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                            </ion-card>
-                        </ion-col>
-                    </ion-row>
+                    <ng-container *ngFor="let post of listPosts">
+                        <ion-row>
+                            <ion-col>
+                                <ion-card>
+                                    <ion-grid fixed>
+                                        <ion-row>
+                                            <ion-col size="1" class="likescase ion-text-center">
+                                                <ion-icon name="heart-outline"></ion-icon>
+                                                {{post.likes}}
+                                                <hr>
+                                                <ion-icon name="heart-dislike-outline"></ion-icon>
+                                                {{post.dislikes}}
+                                            </ion-col>
+                                            <ion-col size="9">
+                                                <ion-card-header>
+                                                    <ion-card-title><a href="/">{{post.title}}</a></ion-card-title>
+                                                    <ion-card-subtitle>Description</ion-card-subtitle>
+                                                </ion-card-header>
+                                            </ion-col>
+                                            <ion-col size="2">
+                                                <img class="thumbnail" src="../../assets/profile.jpg" />
+                                            </ion-col>
+                                        </ion-row>
+                                    </ion-grid>
+                                </ion-card>
+                            </ion-col>
+                        </ion-row>
+                    </ng-container>
+
                 </ion-grid>
 
             </ion-col>
@@ -93,25 +51,41 @@
             </ion-col> -->
             <ion-col size="3">
                 <div class="widget">
-                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 20px; padding-bottom: 20px; color: #fff;">About the topic !</h4>
+                    <h4 class="profiler"></h4>
+                    <ion-grid fixed>
+                        <ion-row>
+                            <ion-col size="4" class="ion-text-center">
+                                <ion-avatar>
+                                    <img class="img-avatar" src="../../assets/profile.jpg" />
+                                </ion-avatar>
+                                <div class="joined">
+                                    <div class="jointext">Joined at</div>
+                                    <div class="joindate">
+                                        Feb '21
+                                    </div>
+                                </div>
+                            </ion-col>
+                            <ion-col size="8" class="ion-text-center">
+                                <ion-button fill="clear" shape="round" style="color: #bb4e3b;">
+                                    <ion-icon name="person-sharp" style="padding-right: 5px;"></ion-icon>Informations
+                                </ion-button>
+                                <p>{{username}}</p>
+                                <p>{{email}}</p>
+
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+
                     <hr>
-                    <p>
-                        test test test test test test test test test test test test test test test test test test test test test test test test test
-                    </p>
                 </div>
-                <div class="widget">
-                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
+                <div class="widget w-center">
+                    <h4 class="usertopics">Joined topics</h4>
                     <hr>
-                    <p>
-                        test test test test test test test test test test test test test test test test test test test test test test test test test
-                    </p>
-                </div>
-                <div class="widget">
-                    <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
-                    <hr>
-                    <p>
-                        test test test test test test test test test test test test test test test test test test test test test test test test test
-                    </p>
+                    <ion-list>
+                        <ion-item>
+                            <ion-label>Awesome Label</ion-label>
+                        </ion-item>
+                    </ion-list>
                 </div>
             </ion-col>
 
