--- a/FrontEnd/src/app/user-page/user-page.page.scss
+++ b/FrontEnd/src/app/user-page/user-page.page.scss
@@ -64,6 +64,9 @@ ion-title {
     -ms-box-shadow: 0px 2px #e4e4e4;
     -o-box-shadow: 0px 2px #e4e4e4;
     box-shadow: 0px 2px #e4e4e4;
+}
+
+.w-center {
     text-align: center;
 }
 
@@ -74,4 +77,47 @@ ion-title {
 
 .image {
     position: absolute;
+}
+
+img.img-avatar {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    left: 10%;
+    transform: translate(0, -60%);
+}
+
+h4.profiler {
+    background-color: #e06b56;
+    margin: 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color: #fff;
+}
+
+.joined {
+    padding: 5px 0 0 10px;
+}
+
+.joindate {
+    padding-top: 10px;
+    padding-left: 5px;
+    color: #696767;
+}
+
+.jointext {
+    font-weight: 550;
+}
+
+h4.usertopics {
+    background-color: #e06b56;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #fff;
+}
+
+.likescase {
+    border-right: 1px solid #c9c9c9;
 }
