Developpement page de création d'un post + qlqs modifications sur check authentification guard et page user + services des posts et topics

--- a/FrontEnd/src/app/home/home.page.html
+++ b/FrontEnd/src/app/home/home.page.html
@@ -45,6 +45,9 @@
                     <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
                     <hr>
                     <p>
+                        <ion-button (click)="usering()" expand="block" fill="clear" shape="round">
+                            Click me
+                        </ion-button>
                         test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
                         test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
                     </p>
