--- a/FrontEnd/src/app/feed/post/crpost/crpost.page.html
+++ b/FrontEnd/src/app/feed/post/crpost/crpost.page.html
@@ -1,9 +1,145 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>crpost</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
+    <ion-grid>
+        <ion-row>
+            <ion-col size="12">
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size="7" offset="1" style="--ion-background-color: #fff;">
+                <ion-grid fixed>
+                    <ion-row>
+                        <ion-col>
+                            <ion-card>
+                                <ion-grid fixed class="ion-padding">
+                                    <ion-row>
+                                        <ion-col size="12">
+                                            <p class="crpost">Create a new post</p>
+                                            <hr style="background-color: #aaa9a9;">
+                                        </ion-col>
+                                    </ion-row>
+                                    <ion-row>
+                                        <ion-col size="6">
+                                            <ion-item>
+                                                <!-- <ion-label>Choose a topic</ion-label> -->
+                                                <ion-select value="topic" mode="ios" interface="popover" placeholder="Select a topic">
+                                                    <ion-select-option value="peperoni">Peperoni Peperoni Peperoni Peperoni</ion-select-option>
+                                                    <ion-select-option value="hawaii">Hawaii Hawaii Hawaii Hawaii Hawaii</ion-select-option>
+
+                                                </ion-select>
+                                                <ion-icon name="chevron-down-outline" mode="ios" slot="end"></ion-icon>
+                                            </ion-item>
+                                        </ion-col>
+                                    </ion-row>
+                                    <ion-row>
+                                        <ion-col size="12">
+                                            <ion-segment #segment value="text" (ionChange)="ptype = segment.value" [disabled]="disableSegment()">
+                                                <ion-segment-button value="text">
+                                                    <ion-label>Text</ion-label>
+                                                </ion-segment-button>
+                                                <ion-segment-button value="image">
+                                                    <ion-label>Image</ion-label>
+                                                </ion-segment-button>
+                                                <ion-segment-button value="invit">
+                                                    <ion-label>Invitation</ion-label>
+                                                </ion-segment-button>
+                                            </ion-segment>
+                                        </ion-col>
+                                    </ion-row>
+                                    <ng-container *ngIf="ptype == 'text'">
+                                        <form [formGroup]="tform">
+                                            <ion-row>
+                                                <ion-col size="12">
+                                                    <ion-input formControlName="title" [(ngModel)]="title" class="ion-padding" placeholder="Title"></ion-input>
+                                                </ion-col>
+                                            </ion-row>
+                                            <ion-row>
+                                                <ion-col size="12">
+                                                    <ion-textarea formControlName="text" placeholder="Put your text here (optional)."></ion-textarea>
+                                                </ion-col>
+                                            </ion-row>
+                                            <ion-row>
+                                                <ion-col offset="10" size="2">
+                                                    <ion-button (click)="submit(tform)" class="postbtn" expand="block" fill="clear">
+                                                        Post
+                                                    </ion-button>
+                                                </ion-col>
+                                            </ion-row>
+                                        </form>
+                                    </ng-container>
+                                    <ng-container *ngIf="ptype == 'image'">
+                                        <form [formGroup]="iform">
+                                            <ion-row>
+                                                <ion-col size="12">
+                                                    <ion-input formControlName="title" [(ngModel)]="title" class="ion-padding" placeholder="Title"></ion-input>
+                                                </ion-col>
+                                            </ion-row>
+                                            <ion-row>
+                                                <ion-col size="12">
+                                                    <ion-input formControlName="test" type="text" placeholder="Awesome Input"></ion-input>
+                                                </ion-col>
+                                            </ion-row>
+                                            <ion-row>
+                                                <ion-col offset="10" size="2">
+                                                    <ion-button (click)="submit(iform)" class="postbtn" expand="block" fill="clear">
+                                                        Post
+                                                    </ion-button>
+                                                </ion-col>
+                                            </ion-row>
+                                        </form>
+                                    </ng-container>
+
+                                </ion-grid>
+
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+
+            </ion-col>
+            <!-- <ion-col size="1">
+      </ion-col> -->
+            <ion-col size="3">
+                <div class="widget">
+                    <h4 class="regles w-center">Posting rules</h4>
+                    <hr>
+                    <ion-list class="ion-no-padding ion-no-margin">
+                        <ion-item>
+                            1- Respect the general order.
+                        </ion-item>
+                        <ion-item>
+                            2- Act as a human being.
+                        </ion-item>
+                        <ion-item>
+                            3- Avoid RACISM.
+                        </ion-item>
+                        <ion-item>
+                            4- Avoid fanaticism.
+                        </ion-item>
+                        <ion-item>
+                            5- Take care !
+                        </ion-item>
+                    </ion-list>
+                </div>
+                <!-- <div class="widget">
+                <h4 style="background-color: #dd4e35; margin: 0; padding-top: 10px; padding-bottom: 10px; color: #fff;">About the topic !</h4>
+                <hr>
+                <p>
+                    test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
+                    test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test
+                </p>
+            </div> -->
+            </ion-col>
+
+        </ion-row>
+        <!-- <ion-row>
+
+  </ion-row> -->
+    </ion-grid>
+
+
 
 </ion-content>
