--- a/FrontEnd/src/app/user-page/user-page.page.html
+++ b/FrontEnd/src/app/user-page/user-page.page.html
@@ -15,7 +15,7 @@
         <ion-row>
             <ion-col size="7" offset="1" style="--ion-background-color: #fff;">
                 <ion-grid fixed>
-                    <ng-container *ngFor="let post of listPosts">
+                    <ng-container *ngFor="let post of listPosts; let ind = index">
                         <ion-row>
                             <ion-col>
                                 <ion-card>
@@ -31,7 +31,7 @@
                                             <ion-col size="9">
                                                 <ion-card-header>
                                                     <ion-card-title><a href="/">{{post.title}}</a></ion-card-title>
-                                                    <ion-card-subtitle>Description</ion-card-subtitle>
+                                                    <ion-card-subtitle>{{ind}}</ion-card-subtitle>
                                                 </ion-card-header>
                                             </ion-col>
                                             <ion-col size="2">
