--- a/FrontEnd/src/app/home/home.page.html
+++ b/FrontEnd/src/app/home/home.page.html
@@ -19,20 +19,29 @@
                 <ion-grid fixed>
                     <ion-row>
                         <ion-col>
-                            <ion-card>
-                                <ion-grid fixed>
-                                    <ion-row>
-                                        <ion-col size="1" style="border-right: 1px solid #c9c9c9 ;"></ion-col>
-                                        <ion-col size="11">
-                                            <ion-card-header>
-                                                <ion-card-title><a href="/">First post</a></ion-card-title>
-                                                <ion-card-subtitle>Description</ion-card-subtitle>
-                                            </ion-card-header>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-
-                            </ion-card>
+                            <ng-container *ngFor="let post of listOfPosts">
+                                <ion-card>
+                                    <ion-grid fixed>
+                                        <ion-row>
+                                            <ion-col size="1" class="likescase ion-text-center">
+                                                <ion-icon name="heart-outline"></ion-icon>
+                                                {{post.likes}}
+                                                <hr>
+                                                <ion-icon name="heart-dislike-outline"></ion-icon>
+                                                {{post.dislikes}}
+                                            </ion-col>
+                                            <ion-col size="9">
+                                                <div class="postedby">Posted by u/{{post.user.username}} - {{post.date}}</div>
+                                                <h3 class="postlink"><a [routerLink]="[ '/post', post.id]">{{post.title}}</a></h3>
+                                                <!-- <div class="postlink"><a [routerLink]="[ '/post', post.id]">{{post.title}}</a></div> -->
+                                            </ion-col>
+                                            <ion-col size="2">
+                                                <img class="thumbnail" src="../../assets/profile.jpg" />
+                                            </ion-col>
+                                        </ion-row>
+                                    </ion-grid>
+                                </ion-card>
+                            </ng-container>
                         </ion-col>
                     </ion-row>
                 </ion-grid>
