--- a/FrontEnd/src/app/feed/topic/topic.page.scss
+++ b/FrontEnd/src/app/feed/topic/topic.page.scss
@@ -161,3 +161,15 @@ ion-button.postbtn {
     border-radius: 10px;
     margin-top: 5%;
 }
+
+p.desc {
+    border-bottom: 1px solid f2f2f2;
+}
+
+ion-button.postcrt {
+    width: 75%;
+    background-color: #e06b56;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 15px;
+}
